--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -34,7 +34,7 @@
           ".{js,ts}": "CAMEL_CASE"
         }
       ],
-      "check-file/folder-naming-convention": ["error", {"**/": "KEBAB_CASE"}],
+      "check-file/folder-naming-convention": ["error", {"src/components/*/": "PASCAL_CASE","src/*/": "KEBAB_CASE" }],
       "unicorn/prefer-query-selector": "off"
   },
   "ignorePatterns": ["src/**/*.test.ts", "src/frontend/generated/*"]
