--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,17 +16,27 @@
       "check-file"
   ],
   "rules": {
-    "@typescript-eslint/strict-boolean-expressions": [
-        2,
-        {
-            "allowString" : false,
-            "allowNumber" : false
+    "unicorn/prevent-abbreviations": [
+      "error",
+      {
+        "replacements": {
+          "prop": false,
+          "props": false,
+          "i": false
         }
+      }
     ],
+    "@typescript-eslint/strict-boolean-expressions": "off",
     "@typescript-eslint/explicit-function-return-type": "error",
     "react/jsx-props-no-spreading": "off",
     "react/prop-types": "off",
     "unicorn/filename-case": "off",
+    "unicorn/consistent-function-scoping": [
+      "error",
+      {
+        "checkArrowFunctions": false
+      }
+    ],
     "check-file/filename-naming-convention": [
         "error",
         {
