--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "cra-template-wint": "1.2.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "swr": "^2.2.4"
   },
   "scripts": {
+    "start_mock": "json-server --watch db.json --port 3001",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -49,6 +51,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-tailwindcss": "^3.13.0",
     "eslint-plugin-unicorn": "^49.0.0",
+    "json-server": "^0.17.4",
     "prettier": "3.1.0",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2",
