--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "daisyui": "^4.4.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.0",
     "react-scripts": "5.0.1",
     "swr": "^2.2.4"
   },
