--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "dependencies": {
     "cra-template-wint": "1.2.35",
     "daisyui": "^4.4.20",
+    "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.21.0",
     "react-scripts": "5.0.1",
     "swr": "^2.2.4"
@@ -43,6 +45,7 @@
     "@testing-library/user-event": "^13.2.1",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/jest": "^27.0.1",
+    "@types/leaflet": "^1.9.8",
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
