--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.2",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.21.0",
     "react-scripts": "5.0.1",
