--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "wawe-school",
+  "homepage": "https://WINt1703.github.io/wawe-school",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -16,6 +17,8 @@
     "swr": "^2.2.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "react_mock": "json-server --watch db.json --port 3001 & react-scripts start",
     "start_mock": "json-server --watch db.json --port 3001",
     "start": "react-scripts start",
@@ -59,6 +62,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-tailwindcss": "^3.13.0",
     "eslint-plugin-unicorn": "^49.0.0",
+    "gh-pages": "^6.1.0",
     "json-server": "^0.17.4",
     "prettier": "3.1.0",
     "tailwindcss": "^3.3.5",
