--- a/jest.config.json
+++ b/jest.config.json
@@ -1,4 +1,9 @@
 {
-  "present": "ts-jest",
-  "testEnvironment": "jsdom"
+  "preset": "ts-jest",
+  "testEnvironment": "jsdom",
+  "globals": {
+    "ts-jest": {
+      "tsconfig": "tsconfig.json"
+    }
+  }
 }
