--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "eslint-plugin-unicorn": "^49.0.0",
     "gh-pages": "^6.1.0",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "json-server": "^0.17.4",
     "prettier": "3.1.0",
     "tailwindcss": "^3.3.5",
