--- a/jest.config.json
+++ b/jest.config.json
@@ -1,9 +1,12 @@
 {
   "preset": "ts-jest",
   "testEnvironment": "jsdom",
-  "globals": {
-    "ts-jest": {
-      "tsconfig": "tsconfig.json"
-    }
+  "transform": {
+    "^.+\\.tsx?$": [
+      "ts-jest",
+      {
+        "tsconfig": "tsconfig.json"
+      }
+    ]
   }
 }
