--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,52 +1,52 @@
 {
-  "root": true,
-  "extends": [
-      "eslint:recommended",
-      "plugin:@typescript-eslint/recommended",
-      "react-app",
-      "react-app/jest",
-      "plugin:react/jsx-runtime",
-      "plugin:tailwindcss/recommended",
-      "plugin:unicorn/recommended"
-  ],
-  "parser": "@typescript-eslint/parser",
-  "parserOptions": { "project": ["./tsconfig.json"] },
-  "plugins": [
-      "@typescript-eslint",
-      "check-file"
-  ],
-  "rules": {
-    "unicorn/prevent-abbreviations": [
-      "error",
-      {
-        "replacements": {
-          "prop": false,
-          "props": false,
-          "i": false,
-          "ref": false
-        }
-      }
-    ],
-    "@typescript-eslint/strict-boolean-expressions": "off",
-    "@typescript-eslint/explicit-function-return-type": "error",
-    "react/jsx-props-no-spreading": "off",
-    "react/prop-types": "off",
-    "unicorn/filename-case": "off",
-    "unicorn/consistent-function-scoping": [
-      "error",
-      {
-        "checkArrowFunctions": false
-      }
-    ],
-    "check-file/filename-naming-convention": [
-        "error",
-        {
-          ".{jsx,tsx,test.tsx,test.jsx}": "PASCAL_CASE",
-          ".{js,ts}": "CAMEL_CASE"
-        }
-      ],
-      "check-file/folder-naming-convention": ["error", {"src/components/*/": "PASCAL_CASE","src/*/": "KEBAB_CASE" }],
-      "unicorn/prefer-query-selector": "off"
-  },
-  "ignorePatterns": ["src/**/*.test.ts", "src/frontend/generated/*"]
+	"root": true,
+	"extends": [
+		"eslint:recommended",
+		"plugin:@typescript-eslint/recommended",
+		"react-app",
+		"react-app/jest",
+		"plugin:react/jsx-runtime",
+		"plugin:tailwindcss/recommended",
+		"plugin:unicorn/recommended"
+	],
+	"parser": "@typescript-eslint/parser",
+	"parserOptions": { "project": ["./tsconfig.json"] },
+	"plugins": ["@typescript-eslint", "check-file"],
+	"rules": {
+		"unicorn/prevent-abbreviations": [
+			"error",
+			{
+				"replacements": {
+					"prop": false,
+					"props": false,
+					"i": false,
+					"ref": false
+				}
+			}
+		],
+		"@typescript-eslint/strict-boolean-expressions": "off",
+		"@typescript-eslint/explicit-function-return-type": "error",
+		"react/jsx-props-no-spreading": "off",
+		"react/prop-types": "off",
+		"unicorn/filename-case": "off",
+		"unicorn/consistent-function-scoping": [
+			"error",
+			{
+				"checkArrowFunctions": false
+			}
+		],
+		"check-file/filename-naming-convention": [
+			"error",
+			{
+				".{jsx,tsx,test.tsx,test.jsx}": "PASCAL_CASE",
+				".{js,ts}": "CAMEL_CASE"
+			}
+		],
+		"check-file/folder-naming-convention": [
+			"error",
+			{ "src/components/*/": "PASCAL_CASE", "src/*/": "KEBAB_CASE" }
+		],
+		"unicorn/prefer-query-selector": "off"
+	},
+	"ignorePatterns": ["src/**/*.test.ts", "src/frontend/generated/*"]
 }
