--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,7 @@
 				}
 			}
 		],
+		"no-mixed-spaces-and-tabs": "off",
 		"@typescript-eslint/strict-boolean-expressions": "off",
 		"@typescript-eslint/explicit-function-return-type": "error",
 		"react/jsx-props-no-spreading": "off",
