fixed: fixed Blog test

--- a/package.json
+++ b/package.json
@@ -19,11 +19,9 @@
 	"scripts": {
 		"supabase_generate": "pnpm dlx supabase gen types typescript --project-id \"sxqlzlelwdslochdutgr\" --schema public > ./src/utils/types/supabase.ts",
 		"deploy": "npm run build && gh-pages -d build -m \"Deploy React app to GitHub Pages\"",
-		"react_mock": "json-server --watch db.json --port 3001 & react-scripts start",
-		"start_mock": "json-server --watch db.json --port 3001",
 		"start": "react-scripts start",
 		"build": "react-scripts build",
-		"test": "react-scripts test",
+		"test": "pnpm jest",
 		"eject": "react-scripts eject",
 		"prettier_format": "pnpm prettier . --write",
 		"prettier_check": "pnpm prettier . --check",
@@ -65,7 +63,6 @@
 		"gh-pages": "^6.1.0",
 		"jest": "^29.7.0",
 		"jest-environment-jsdom": "^29.7.0",
-		"json-server": "^0.17.4",
 		"prettier": "3.1.0",
 		"prettier-plugin-tailwindcss": "^0.5.11",
 		"supabase": ">=1.8.1",
