--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,8 +25,11 @@
 			}
 		],
 		"no-mixed-spaces-and-tabs": "off",
+		"@typescript-eslint/explicit-function-return-type": [
+			"error",
+			{ "allowExpressions": true }
+		],
 		"@typescript-eslint/strict-boolean-expressions": "off",
-		"@typescript-eslint/explicit-function-return-type": "error",
 		"react/jsx-props-no-spreading": "off",
 		"react/prop-types": "off",
 		"unicorn/filename-case": "off",
