--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@hookform/resolvers": "^3.3.4",
 		"@supabase/supabase-js": "^2.39.3",
 		"cra-template-wint": "1.2.35",
 		"daisyui": "^4.4.20",
@@ -14,7 +15,9 @@
 		"react-icons": "^4.12.0",
 		"react-leaflet": "^4.2.1",
 		"react-router-dom": "^6.21.0",
-		"react-scripts": "5.0.1"
+		"react-scripts": "5.0.1",
+		"validator": "^13.11.0",
+		"zod": "^3.22.4"
 	},
 	"scripts": {
 		"supabase_generate": "pnpm dlx supabase gen types typescript --project-id \"sxqlzlelwdslochdutgr\" --schema public > ./src/utils/types/supabase.ts",
@@ -52,6 +55,7 @@
 		"@types/node": "^16.7.13",
 		"@types/react": "^18.2.0",
 		"@types/react-dom": "^18.2.0",
+		"@types/validator": "^13.11.8",
 		"@typescript-eslint/eslint-plugin": "^5.62.0",
 		"@typescript-eslint/parser": "^5.62.0",
 		"eslint": "^8.53.0",
