--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"react-leaflet": "^4.2.1",
 		"react-router-dom": "^6.21.0",
 		"react-scripts": "5.0.1",
+		"react-swipeable": "^7.0.1",
 		"validator": "^13.11.0",
 		"zod": "^3.22.4"
 	},
